# wasm-sdl-tinkering

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  cleanup.sh  compile_emscripten.sh  index.html  main.cpp
.github/workflows/: cmake.yml  wasm.yml
source/: Game.cpp  Game.hpp  main.cpp
source/Engine/assets/: ImageAsset.hpp
source/Engine/utility/: AssetLoader.hpp  IOHelperFunctions.hpp  Singleton.hpp
